# tdeparted

./: Makefile.am  README.md  autogen.sh  build.sh  build_deb.sh  clean.sh  configure.ac  org.trinity.tdeparted.policy.in.in  tdeparted.desktop  tdeparted.in
doc/: Makefile  README_TDE_HELP.md
doc/en/: index.docbook
doc/en/figures/: README.md
doc/fr/: README.md
include/: CopyBlocks.h  FS_Info.h  Makefile.in  Operation.h  OperationConvertPartitionTable.h  OperationCreatePartitionTable.h  OperationDetail.h  Utils.h  Win_GParted_TQt.h  i18n.h
src/: CopyBlocks.cc  Device.cc  Dialog_Progress.cc  FS_Info.cc  FileSystem.cc  GParted_Core.cc  Makefile.am  Makefile.in  Mount_Info.cc  OperationConvertPartitionTable.cc  OperationCreatePartitionTable.cc  OperationDetail.cc  Utils.cc  Win_GParted.cc  Win_GParted_TQt.cc  main.cc  main_tqt3.cc
upstream/: README.gparted
